alteração no codigo para ficar mais responsivo e exibir o valor na tela atraves do html e não do alert

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <input placeholder="entre" type="number" id="input-min">
         <input placeholder="e" type="number" id="input-max">
     </div>
+    <h2 class="result-h2">Resultado:</h2>
+    <h3 id="result">0</h3>
     <button onclick="drawNumber()">Sortear</button>
 </body>
 <script src="./scripts.js"></script>
